--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,7 +7,7 @@
     text-decoration: none;
 
     &--img {
-      width: 210px;
+      width: 140px;
       height: 34px;
     }
   }
@@ -56,8 +56,8 @@
     background-image: url(/img/background.jpg);
     background-repeat: no-repeat;
     background-position: center;
-
-    height: auto;
+    width: 100%;
+    height: 500px;
 
 
     @media (min-width: 1024px) {
@@ -69,7 +69,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+
       height: 328px;
       height: 389px;
       padding-top: 40px;
@@ -77,7 +77,6 @@
       @media (min-width:768px) {
         width: 380px;
         height: 323px;
-        margin: 0 auto;
         padding-top: 89px;
       }
 
