--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -1,5 +1,5 @@
 .post {
-  padding-top: 140px;
+  padding: 140px 0 100px;
   background-color: #f8f8f8;
   &__body {
     display: flex;
@@ -23,6 +23,13 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
+
+    &--pos {
+      font-family: "Nunito", sans-serif;
+      font-size: 16px;
+      line-height: 26px;
+      color: #000000DE;
+    }
   }
 
   &__input {
@@ -97,7 +104,7 @@
   }
 
   &__btn {
-    background-color: #F4E041;
+    background-color: #B4B4B4;
     width: 100px;
     padding: 5px 20px;
     text-align: center;
@@ -106,5 +113,12 @@
     font-family: "Nunito", sans-serif;
     line-height: 28px;
     font-size: 16px;
+    align-self: center;
+    color: #fff;
+
+    &--active {
+      background-color: #F4E041;
+      color: #000;
+    }
   }
 }
