--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,10 +1,17 @@
 .container {
  @media (min-width: 360px) {
-  padding: 0 16px;
+  width: 328px;
   margin: 0 auto;
  }
 
+ @media (min-width: 768px) {
+  width: 768px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ }
+
   @media (min-width: 1024px) {
-    max-width: 1024px;
+    width: 1024px;
   }
 }
