finished eccept post form

--- a/src/components/Get/Get.scss
+++ b/src/components/Get/Get.scss
@@ -47,6 +47,10 @@
     width: 328px;
     height: 254px;
 
+    @media (min-width: 1024px) {
+      width: 282px;
+    }
+
     &--img {
       width: 70px;
       height: 70px;
