--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -34,7 +34,7 @@
 
   &__input {
     width: 100%;
-    height: 54px;
+    height: 40px;
     border: 1px solid #D0CFCF;
     padding: 14px 0 14px 16px;
     font-family: "Nunito", sans-serif;
@@ -104,6 +104,7 @@
   }
 
   &__btn {
+    cursor: pointer;
     background-color: #B4B4B4;
     width: 100px;
     padding: 5px 20px;
