--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -17,7 +17,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 12px 0;
-    width: 328px;
     max-width: 767px;
 
     @media (min-width: 768px) {
@@ -36,6 +35,7 @@
     }
 
     &--button {
+      text-decoration: none;
       background-color: #F4E041;
       width: 100px;
       padding: 5px 29px;
@@ -104,6 +104,7 @@
     }
 
     &--btn {
+      text-decoration: none;
       background-color: #F4E041;
       width: 100px;
       padding: 5px 21px;
